--- a/deploy/crd.yaml
+++ b/deploy/crd.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: items.philbrookes
+  name: items.phil.brookes
 spec:
-  group: philbrookes
+  group: phil.brookes
   names:
     kind: Item
     listKind: ItemList
